# home-phone-prototype

./: Cargo.toml
res/: display_mockups.md  pins.md
src/: display.rs  display_data.rs  keypad.rs  keypad_event.rs  main.rs  phone.rs
src/linphone/: call.rs  core_callbacks.rs  core_context.rs  error.rs  mod.rs  reason.rs
