[package]
name = "home-phone"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
liblinphone-sys = { git = "https://github.com/jonlamb-gh/liblinphone-sys.git" }
phonenumber = "0.2"
ctrlc = "3.1"
chrono = "0.4"
keypad = "0.1.4"
embedded-hal = { version = "0.2.2", features = ["unproven"] }

[dependencies.rppal]
version = "0.11.2"
features = ["hal", "hal-unproven"]

# https://github.com/rust-embedded/gpio-cdev/issues/13
# https://github.com/nix-rust/nix/issues/1057
#[patch.crates-io]
#nix = { git = "https://github.com/nix-rust/nix/", rev = "196b05b5c7b" }
